add glass and senc; use ini

--- a/diy/static/index.html
+++ b/diy/static/index.html
@@ -14,6 +14,8 @@
 </header>
 <div id="container">
 <ul>
+<li><a href="/glass/">文言文翻译</a></li>
+<li><a href="/senc/">简易文本加密</a></li>
 <li><a href="/wenyan/">文言文翻译</a></li>
 <li><a href="/clozeword/">首字母填空助手 [旧]</a></li>
 </ul>
