--- a/diy/static/index.html
+++ b/diy/static/index.html
@@ -4,13 +4,13 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta http-equiv="Content-Language" content="zh-cn">
 <link rel="shortcut icon" href="/static/favicon.png">
-<title>Gumble 网页应用</title>
+<title>网页应用 - Gumble</title>
 <meta content="Gumble" name="author">
 <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
 <header>
-<h1>Gumble 网页应用</h1>
+<h1>网页应用</h1>
 </header>
 <div id="container">
 <ul>
