change to cdnjs sources

--- a/diy/static/glass/index.html
+++ b/diy/static/glass/index.html
@@ -6,13 +6,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- , maximum-scale=1.0 -->
 <title>玻璃幕墙光反射影响预测工具</title>
-<script src="jquery-1.10.2.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="jquery-ui-1.10.4.custom.min.js"></script>
 <link rel="stylesheet" type="text/css" href="jquery-ui-1.10.4.custom.min.css">
 <link href="chardinjs.css" rel="stylesheet">
 <script src="chardinjs.min.js"></script>
 <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key=AIzaSyC8mjYLDLdDSwJJsEzJNKCCGiE_R2RzyK0"></script>
-<script src="d3.v3.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.2/d3.min.js"></script>
 <style>
 body {
 	margin: .5em 2em;
