--- a/diy/static/senc/index.html
+++ b/diy/static/senc/index.html
@@ -10,7 +10,7 @@
 <script src="core-min.js"></script>
 <script src="aes.js"></script>
 <script src="enc-c4096.js"></script>
-<script src="zxcvbn-async.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/zxcvbn/1.0/zxcvbn-async.js"></script>
 <script>
 var C4096Formatter = {
 	stringify: function (cipherParams) {
