--- a/diy/static/index.html
+++ b/diy/static/index.html
@@ -17,7 +17,7 @@
 <li><a href="/glass/">玻璃幕墙光反射影响预测工具</a></li>
 <li><a href="/senc/">简易文本加密</a></li>
 <li><a href="/wenyan/">文言文翻译</a></li>
-<li><a href="/clozeword/">首字母填空助手 [旧]</a></li>
+<li><a href="/clozeword/">首字母填空助手</a></li>
 </ul>
 </div>
 <footer>
