--- a/diy/static/index.html
+++ b/diy/static/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta http-equiv="Content-Language" content="zh-cn">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="/static/favicon.png">
 <title>网页应用 - Gumble</title>
 <meta content="Gumble" name="author">
