--- a/diy/static/index.html
+++ b/diy/static/index.html
@@ -7,7 +7,7 @@
 <link rel="shortcut icon" href="/static/favicon.png">
 <title>网页应用 - Gumble</title>
 <meta content="Gumble" name="author">
-<link rel="stylesheet" href="/static/style.css">
+<link rel="stylesheet" href="/static/style.m.css">
 </head>
 <body>
 <div id="container">
@@ -15,10 +15,13 @@
 <h1>网页应用</h1>
 </header>
 <ul>
-<li><a href="/glass/">玻璃幕墙光反射影响预测工具</a></li>
-<li><a href="/senc/">简易文本加密</a></li>
 <li><a href="/wenyan/">文言文翻译</a></li>
+<li><a href="/senc/">简易文本加密</a></li>
+<li><a href="/glass/">玻璃幕墙光反射影响预测工具</a></li>
 <li><a href="/clozeword/">首字母填空助手</a></li>
+<!--
+<li><a href="/jiebademo/">结巴分词演示</a> (<a href="https://github.com/gumblex/jieba">GitHub fork</a>)</li>
+-->
 </ul>
 </div>
 <footer>
