auto estimate on build

--- a/diy/static/index.html
+++ b/diy/static/index.html
@@ -15,7 +15,7 @@
 <h1>网页应用</h1>
 </header>
 <ul>
-<li><a href="//wenyan.gumble.tk/">文言文翻译</a></li>
+<li><a href="/wenyan/">文言文翻译</a></li>
 <li><a href="/senc/">简易文本加密</a></li>
 <li><a href="/glass/">玻璃幕墙光反射影响预测工具</a></li>
 <li><a href="/clozeword/">首字母填空助手</a></li>
@@ -25,7 +25,7 @@
 </ul>
 </div>
 <footer>
-<p>Gumble, 2014</p>
+<p>Gumble, 2014-2015</p>
 </footer>
 </body>
 </html>
