force https js; use textContent and inline-block in language detect

--- a/diy/static/senc/index.html
+++ b/diy/static/senc/index.html
@@ -5,12 +5,12 @@
 <meta http-equiv="Content-Language" content="zh-cn">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>简易文本加密</title>
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/pure/0.5.0/pure-min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/0.5.0/pure-min.css">
 <link rel="stylesheet" href="style.css">
 <script src="core-min.js"></script>
 <script src="aes.js"></script>
 <script src="enc-c4096.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/zxcvbn/1.0/zxcvbn-async.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/zxcvbn/1.0/zxcvbn-async.js"></script>
 <script>
 var C4096Formatter = {
 	stringify: function (cipherParams) {
