--- a/diy/static/index.html
+++ b/diy/static/index.html
@@ -7,7 +7,7 @@
 <link rel="shortcut icon" href="/static/favicon.png">
 <title>网页应用 - Gumble</title>
 <meta content="Gumble" name="author">
-<link rel="stylesheet" href="/static/style.m.css">
+<link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
 <div id="container">
@@ -17,16 +17,15 @@
 <ul>
 <li><a href="/wenyan/">文言文翻译</a></li>
 <li><a href="/buka/">布卡漫画下载工具</a></li>
+<li><a href="/name/">中文姓名生成器</a></li>
 <li><a href="/senc/">简易文本加密</a></li>
 <li><a href="/glass/">玻璃幕墙光反射影响预测工具</a></li>
 <li><a href="/clozeword/">首字母填空助手</a></li>
-<!--
 <li><a href="/jiebademo/">结巴分词演示</a> (<a href="https://github.com/gumblex/jieba">GitHub fork</a>)</li>
--->
 </ul>
 </div>
 <footer>
-<p>Gumble, 2014-2015</p>
+<p>&copy; 2014-2015 Gumble</p>
 </footer>
 </body>
 </html>
