better style of index and jieba demo

--- a/diy/static/index.html
+++ b/diy/static/index.html
@@ -8,6 +8,24 @@
 <title>网页应用 - Gumble</title>
 <meta content="Gumble" name="author">
 <link rel="stylesheet" href="/static/style.css">
+<style>
+header{
+text-align: center;
+}
+#container{
+max-width: 30em;
+}
+p{
+margin: .75em;
+}
+a{
+color: #222;
+padding: .25em;
+}
+a:visited{color: #444;}
+a:hover, a:focus{color: #777;}
+a:focus{outline: #777 dotted 1px;}
+</style>
 </head>
 <body>
 <div id="container">
@@ -19,13 +37,13 @@
 <li><a href="/buka/">布卡漫画下载工具</a></li>
 <li><a href="/name/">中文姓名生成器</a></li>
 <li><a href="/senc/">简易文本加密</a></li>
+<li><a href="/jiebademo/">结巴分词演示</a></li>
 <li><a href="/glass/">玻璃幕墙光反射影响预测工具</a></li>
 <li><a href="/clozeword/">首字母填空助手</a></li>
-<li><a href="/jiebademo/">结巴分词演示</a> (<a href="https://github.com/gumblex/jieba">GitHub fork</a>)</li>
 </ul>
-</div>
 <footer>
 <p>&copy; 2014-2015 Gumble</p>
 </footer>
+</div>
 </body>
 </html>
