--- a/diy/static/index.html
+++ b/diy/static/index.html
@@ -40,6 +40,7 @@ a:focus{outline: #777 dotted 1px;}
 <li><a href="/jiebademo/">结巴分词演示</a></li>
 <li><a href="/glass/">玻璃幕墙光反射影响预测工具</a></li>
 <li><a href="/clozeword/">首字母填空助手</a></li>
+<li><a href="/base1k/">Base1k/4k 编码</a></li>
 </ul>
 <footer>
 <p>&copy; 2014-2015 Gumble</p>
