--- a/diy/static/index.html
+++ b/diy/static/index.html
@@ -35,6 +35,7 @@ a:focus{outline: #777 dotted 1px;}
 <ul>
 <li><a href="/wenyan/">文言文翻译</a></li>
 <li><a href="/name/">中文姓名生成器</a></li>
+<li><a href="/uname/">用户名生成器</a></li>
 <li><a href="/senc/">简易文本加密</a></li>
 <li><a href="/jiebademo/">结巴分词演示</a></li>
 <li><a href="/glass/">玻璃幕墙光反射影响预测工具</a></li>
